<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_3rd_screen_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Common.Login_register.RegisterSession_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">


        <ImageView
            android:contentDescription="@string/flecha"
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="retroceder"
            android:padding="5dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/signup_slide_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/retail_3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/back_bt"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/logo_2"
            tools:ignore="ContentDescription"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99ffffff"
                android:padding="7dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country_code_picker"
                android:hint="@string/numero"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/call"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signup_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_phone_number"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:onClick="inicio"
                android:text="@string/register"
                android:textColor="@color/white" />


        </RelativeLayout>


        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:onClick="callLoginFromSignUp"
            android:text="@string/iniciarSesion"
            android:textColor="@color/black" />


    </LinearLayout>


</ScrollView>